# tech-crawler

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
data/papers/trending/: trending_paper.txt
src/tech_crawler/: __init__.py  main.py
src/tech_crawler/anime_news/: __init__.py  crawler.py  db.py  pipeline.py  summarizer.py
src/tech_crawler/trending_paper/: crawler.py  db.py  download_papers.py  main.py  pipeline.py  read_papers.py  send_email.py  test_email.py
tests/: test_crawler.py  test_download_papers.py  test_main.py  test_pipeline.py  test_read_papers.py
