[project]
name = "tech-crawler"
version = "0.1.0"
description = "Daily technology content crawler jobs."
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "pypdf>=5.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "markdown>=3.5.0",
]

[project.scripts]
tech-crawler = "tech_crawler.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tech_crawler"]
